--- a/.meta/tmpl/Dockerfile.tmpl
+++ b/.meta/tmpl/Dockerfile.tmpl
@@ -27,6 +27,7 @@
 {{ $kubectl_tree := index $github "ahmetb/kubectl-tree" -}}
 {{ $kube_lineage := index $github "tohjustin/kube-lineage" -}}
 {{ $kubectl_neat := index $github "itaysk/kubectl-neat" -}}
+{{ $ketall := index $github "corneliusweig/ketall" -}}
 
 {{ $op := index .config.tools "1password" -}}
 {{ $kubectl := index .config.tools "kubernetes/kubectl" -}}
@@ -163,6 +164,11 @@ FROM core as kubectl_neat
 RUN curl -fL "https://github.com/itaysk/kubectl-neat/releases/download/v{{ $kubectl_neat }}/kubectl-neat_linux_amd64.tar.gz" | tar zx \
     && mv kubectl-neat /tmp
 
+FROM core as ketall
+# hadolint ignore=DL4006
+RUN curl -fL "https://github.com/corneliusweig/ketall/releases/download/v{{ $ketall }}/ketall-amd64-linux.tar.gz" | tar zx \
+    && mv ketall-amd64-linux /tmp/ketall
+
 FROM core
 
 {{ template "apt-get install" (slice "python3" "python3-pip" "less" "groff") }}
@@ -216,6 +222,7 @@ COPY --from=kubens /tmp/kubens /usr/local/bin/kns
 COPY --from=kubectl_tree /tmp/kubectl-tree /usr/local/bin/kubectl-tree
 COPY --from=kube_lineage /tmp/kube-lineage /usr/local/bin/kubectl-lineage
 COPY --from=kubectl_neat /tmp/kubectl-neat /usr/local/bin/kubectl-neat
+COPY --from=ketall /tmp/ketall /usr/local/bin/ketall
 COPY --from=crossplane /tmp/kubectl-crossplane /usr/local/bin/kubectl-crossplane
 COPY --from=argocd /tmp/argocd /usr/local/bin/argocd
 COPY --from=hadolint /tmp/hadolint /usr/local/bin/hadolint
