--- a/.meta/tmpl/ktabs.tmpl
+++ b/.meta/tmpl/ktabs.tmpl
@@ -1,3 +1,3 @@
 {{ range $profile := .config.awsVaultProfiles -}}
-title: {{ $profile }};; command: just profile {{ $profile }} just {{ $.config.shell }} ;; profile: {{ $profile }}
+title: {{ $profile }};; command: just ws profile {{ $profile }} just ws {{ $.config.shell }} ;; profile: {{ $profile }}
 {{ end -}}
