--- a/.meta/tmpl/Dockerfile.tmpl
+++ b/.meta/tmpl/Dockerfile.tmpl
@@ -194,30 +194,40 @@ FROM core as gcloud
 # hadolint ignore=DL3003,DL4006
 RUN cd /opt && curl -fL "https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-{{ $gcloud }}-linux-x86_64.tar.gz" | tar zx
 
+FROM core as awscliv2
+RUN tmp="$(mktemp -d)" \
+  && cd "$tmp" \
+  && curl -Lf "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-{{ $awscli }}.zip" -o "awscliv2.zip" \
+  && unzip awscliv2.zip \
+  && mkdir -p /tmp/awscliv2 \
+  && (shopt -s dotglob && mv ./aws/* /tmp/awscliv2) \
+  && rm -rf "$tmp"
+
+FROM core as neovim
+RUN curl -Lf "https://github.com/neovim/neovim/releases/download/v{{ $neovim }}/nvim.appimage" -o "/tmp/nvim.appimage" \
+  && chmod u+x /tmp/nvim.appimage
+
 FROM core
 
 {{ template "apt-get install" (slice "python3" "python3-pip" "less" "groff") }}
 
 {{ template "apt-get install" .config.extraPackages }}
 
+RUN pip3 install --no-cache-dir \
+    {{ range $p, $v := .config.tools.pip -}}
+        {{ $p }}=={{ $v }} \
+    {{ end }};
+
+#neovim
+
 # hadolint ignore=DL3003
-RUN tmp="$(mktemp -d)" && cd "$tmp" \
-    && curl -Lf "https://github.com/neovim/neovim/releases/download/v{{ $neovim }}/nvim.appimage" -O \
-    && chmod u+x ./nvim.appimage \
-    && ./nvim.appimage --appimage-extract \
-    && ls "$tmp/squashfs-root" > /tmp/ls \
+RUN --mount=type=bind,from=neovim,source=/tmp/nvim.appimage,target=/tmp/nvim.appimage \
+    tmp="$(mktemp -d)" && cd "$tmp" \
+    && /tmp/nvim.appimage --appimage-extract \
     && cp -ra "$tmp/squashfs-root/usr" / \
     && rm -rf "$tmp"
 
-# hadolint ignore=DL3003,DL4006
-RUN tmp="$(mktemp -d)" \
-  && cd "$tmp" \
-  && curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64-{{ $awscli }}.zip" -o "awscliv2.zip" \
-  && unzip awscliv2.zip \
-  && ./aws/install \
-  && rm -rf "$tmp"
-
-ENV AWS_CLI_VERSION="{{ $awscli }}"
+#gcloud
 
 COPY --from=gcloud /opt/google-cloud-sdk /opt/google-cloud-sdk
 
@@ -229,10 +239,12 @@ RUN gcloud config set core/disable_usage_reporting true \
 
 ENV GCLOUD_CLI_VERSION="{{ $gcloud }}"
 
-RUN pip3 install --no-cache-dir \
-    {{ range $p, $v := .config.tools.pip -}}
-        {{ $p }}=={{ $v }} \
-    {{ end }};
+#awscliv2
+
+RUN --mount=type=bind,from=awscliv2,source=/tmp/awscliv2,target=/tmp/awscliv2 /tmp/awscliv2/install
+
+ENV AWS_CLI_VERSION="{{ $awscli }}"
+
 
 # hadolint ignore=DL3059
 RUN mkdir -p /etc/tflint.d/plugins
@@ -321,7 +333,6 @@ ARG workdir="/workspace"
 {{ $zsh_autosuggestions := index .config.tools "zsh-users/zsh-autosuggestions" -}}
 {{ $zsh_syntax_highlighting := index .config.tools "zsh-users/zsh-syntax-highlighting" -}}
 {{ $zsh_completions := index .config.tools "zsh-users/zsh-completions" -}}
-{{ $zsh_vim_mode := index .config.tools "softmoth/zsh-vim-mode" -}}
 {{ $zsh_notify := index .config.tools "marzocchi/zsh-notify" -}}
 
 RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" --keep-zshrc \
@@ -329,7 +340,6 @@ RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master
     && git clone https://github.com/zsh-users/zsh-autosuggestions.git --depth 1 --branch v{{ $zsh_autosuggestions }} "$plugins/zsh-autosuggestions" \
     && git clone https://github.com/zsh-users/zsh-syntax-highlighting.git --depth 1 --branch {{ $zsh_syntax_highlighting }} "$plugins/zsh-syntax-highlighting" \
     && git clone https://github.com/zsh-users/zsh-completions.git --depth 1 --branch {{ $zsh_completions }} "$plugins/zsh-completions" \
-    && git clone https://github.com/softmoth/zsh-vim-mode.git "$plugins/zsh-vim-mode" && git -C "$plugins/zsh-vim-mode" reset --hard {{ $zsh_vim_mode }} \
     && find "$plugins" -name .git -type d -prune -exec rm -rf {} \;
 
 RUN mv "$home/.bashrc" "$home/.bashrc_original" \
