Upgrade Disable Zeliji Use kitty instead of konsole

--- a/.meta/tmpl/ktabs.tmpl
+++ b/.meta/tmpl/ktabs.tmpl
@@ -1,3 +1,3 @@
 {{ range $profile := .config.awsVaultProfiles -}}
-title: {{ $profile }};; command: just ws profile {{ $profile }} just ws {{ $.config.shell }} ;; profile: {{ $profile }}
+kitty @ launch --type=tab --tab-title "{{ $profile }}" --title "{{ $profile }}" just ws profile "{{ $profile }}" just ws "{{ $.config.shell }}";
 {{ end -}}
